names in the profiler tab are now correctly clipped when they overflow their container

--- a/src/app/Profiler/TimeRender.less
+++ b/src/app/Profiler/TimeRender.less
@@ -1,6 +1,7 @@
 .TimeRender {
    display: flex;
    align-items: center;
+   width: 100%;
 }
 
 .TimeRender__value {
